# mkdocs-obsidian-support-plugin

./: .gitignore  pyproject.toml  setup.py
obsidian_support/conversion/: abstract_conversion.py  util.py
obsidian_support/conversion/pdf/: pdf.py
test/: test_conversions.py
