[project]
name = "mkdocs-obsidian-support-plugin"
dynamic = ["version", "entry-points"]
authors = [
    { name = "ndy2", email = "emrdbs12@gmail.com" }
]
description='A MkDocs plugin that supports obsidian to mkdocs convert'
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
keywords=['mkdocs']
dependencies = [
    "assertpy~=1.1",
    "mkdocs>=1.0.4",
    "overrides~=7.7.0",
    "pytest~=8.0.1",
    "setuptools==67.3.3",
]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7'
]

[project.urls]
homepage = "https://github.com/ndy2/mkdocs-obsidian-support-plugin"

[build-system]
requires = ["setuptools>=44", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
managed = true
link-mode = "copy"
